--- a/file.css
+++ b/file.css
@@ -12,7 +12,7 @@ body {
 	justify-content: center;
 	align-items: center;
 	min-height: 100vh;
-	background: linear-gradient(to bottom, #d3bddb, #9DB6F9); /*fiolet*/
+	background: linear-gradient(to bottom, #ccc, #9DB6F9); /*fiolet*/
 }
 header{
     display: inline-flex;
@@ -148,5 +148,5 @@ h1, h2{
 }
 h1{
     font-size: 120px;
-    color:aliceblue;
+    color: greenyellow;
 }
